datasource db {
  provider = "postgresql"
}

generator client {
  provider = "prisma-client-js"
}

// ==========================================
// ENUMS (Data Dictionary Domain Constraints)
// ==========================================

enum Role {
  admin
  hr
  pm  
  employee
}

enum PaymentModel {
  fixed
  hourly
  revenue_share
}

enum ProjectStatus {
  pending
  active
  completed
  cancelled
}

enum TaskPriority {
  low
  medium
  high
  critical
}

enum TaskStatus {
  pending
  in_progress
  completed
  blocked
}

enum PaymentStatus {
  pending
  processed
  paid
}

// ==========================================
// IDENTITY & HR CORE MODULES
// ==========================================

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique @db.VarChar(255)
  password  String   @db.VarChar(255)
  role      Role     @default(employee)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  employee  Employee?
  messages  Message[]
  reactions Reaction[]

  @@map("users")
}

model Department {
  id        Int        @id @default(autoincrement())
  name      String     @unique @db.VarChar(100)
  createdAt DateTime   @default(now()) @map("created_at")
  employees Employee[]

  @@map("departments")
}

model Employee {
  id            Int          @id @default(autoincrement())
  userId        Int          @unique @map("user_id")
  departmentId  Int?         @map("department_id")
  firstName     String       @map("first_name") @db.VarChar(100)
  lastName      String       @map("last_name") @db.VarChar(100)
  paymentModel  PaymentModel @default(fixed) @map("payment_model")
  baseSalary    Decimal?     @map("base_salary") @db.Decimal(10, 2)
  hourlyRate    Decimal?     @map("hourly_rate") @db.Decimal(10, 2)
  createdAt     DateTime     @default(now()) @map("created_at")
  updatedAt     DateTime     @updatedAt @map("updated_at")

  // Relations
  user            User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  department      Department?   @relation(fields: [departmentId], references: [id], onDelete: SetNull)
  teamMemberships ProjectTeam[]
  tasks           Task[]
  timeLogs        TimeLog[]
  payrolls        Payroll[]

  @@map("employees")
}

model Client {
  id        Int       @id @default(autoincrement())
  name      String    @db.VarChar(255)
  email     String    @unique @db.VarChar(255)
  company   String?   @db.VarChar(255)
  createdAt DateTime  @default(now()) @map("created_at")
  projects  Project[]

  @@map("clients")
}

// ==========================================
// OPERATIONS & TASK MODULES
// ==========================================

model Project {
  id          String        @id @default(uuid())
  clientId    Int           @map("client_id")
  name        String        @db.VarChar(255)
  description String?       @db.Text
  status      ProjectStatus @default(pending)
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @updatedAt @map("updated_at")

  // Relations
  client      Client        @relation(fields: [clientId], references: [id], onDelete: Cascade)
  tasks       Task[]
  teamMembers ProjectTeam[]

  @@map("projects")
}

model ProjectTeam {
  projectId  String   @map("project_id")
  employeeId Int      @map("employee_id")
  assignedAt DateTime @default(now()) @map("assigned_at")

  // Relations
  project  Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  employee Employee @relation(fields: [employeeId], references: [id], onDelete: Cascade)

  @@id([projectId, employeeId])
  @@map("project_teams")
}

model Task {
  id          String       @id @default(uuid())
  projectId   String       @map("project_id")
  employeeId  Int?         @map("employee_id")
  title       String       @db.VarChar(255)
  description String?      @db.Text
  priority    TaskPriority @default(medium)
  status      TaskStatus   @default(pending)
  dueDate     DateTime?    @map("due_date")
  createdAt   DateTime     @default(now()) @map("created_at")
  updatedAt   DateTime     @updatedAt @map("updated_at")

  // Relations
  project   Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)
  employee  Employee? @relation(fields: [employeeId], references: [id], onDelete: SetNull)
  timeLogs  TimeLog[]

  @@map("tasks")
}

model TimeLog {
  id          String   @id @default(uuid())
  taskId      String   @map("task_id")
  employeeId  Int      @map("employee_id")
  hours       Decimal  @db.Decimal(5, 2)
  description String?  @db.Text
  loggedAt    DateTime @default(now()) @map("logged_at")

  // Relations
  task     Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
  employee Employee @relation(fields: [employeeId], references: [id], onDelete: Cascade)

  @@map("time_logs")
}

model Payroll {
  id              String        @id @default(uuid())
  employeeId      Int           @map("employee_id")
  amount          Decimal       @db.Decimal(10, 2)
  paymentStatus   PaymentStatus @default(pending) @map("payment_status")
  payPeriodStart  DateTime      @map("pay_period_start")
  payPeriodEnd    DateTime      @map("pay_period_end")
  processedAt     DateTime?     @map("processed_at")
  createdAt       DateTime      @default(now()) @map("created_at")

  // Relations
  employee Employee @relation(fields: [employeeId], references: [id], onDelete: Cascade)

  @@map("payroll")
}

// ==========================================
// SLACK-LIKE CHAT & COLLABORATION MODULE
// ==========================================

model Channel {
  id        String   @id @default(uuid())
  name      String   @unique @db.VarChar(100)
  isPrivate Boolean  @default(false) @map("is_private")
  createdAt DateTime @default(now()) @map("created_at")

  // Relations
  messages Message[]

  @@map("channels")
}

model Message {
  id        String   @id @default(uuid())
  channelId String   @map("channel_id")
  userId    Int      @map("user_id")
  content   String   @db.Text
  parentId  String?  @map("parent_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Core Relations
  channel Channel @relation(fields: [channelId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Threading (Self-Referencing Relation)
  parent  Message?  @relation("ThreadReplies", fields: [parentId], references: [id], onDelete: Cascade)
  replies Message[] @relation("ThreadReplies")

  // Reactions Relation
  reactions Reaction[]

  // Performance Indexing for fast sub-thread reads
  @@index([parentId], map: "idx_message_parent")
  @@map("messages")
}

model Reaction {
  id        String   @id @default(uuid())
  messageId String   @map("message_id")
  userId    Int      @map("user_id")
  emoji     String   @db.VarChar(50)
  createdAt DateTime @default(now()) @map("created_at")

  // Relations
  message Message @relation(fields: [messageId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Explicit constraint: A single user can only leave one distinct emoji instance per message
  @@unique([messageId, userId, emoji])
  @@map("reactions")
}